# alphazero_gomoku

./: .gitattributes  .gitignore  PRODUCT.md  README.md  __init__.py  environment.yml  game.py  gumbel.py  heuristic_v0.py  imp.txt  inference.py  mcts.py  model.py  play.py  pyproject.toml  requirements.txt  selfplay_batched.py  torch_compat.py  train.py  ut.txt  utils.py  web_play.py
.impeccable/critique/: 2026-06-14T07-57-19Z__docs-index-html.md
alphazero_gomoku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: VERSION_HISTORY.md  app.js  engine.worker.js  hero.js  index.html  styles.css  sw.js
docs/assets/: leaderboard.json
docs/assets/model/: manifest.json
docs/assets/models/: catalog.json
docs/assets/training/: v6.json
outputs/checkpoints/a100-4-prod-v3/: gomoku10_best.pt
outputs/metrics/: a100-4-prod-v3.jsonl  prod-v2-16worker-smoke.jsonl  prod-v2-smoke-fp32.jsonl  prod-v2-smoke.jsonl  prod-v3-smoke-stable.jsonl
outputs/metrics/v2-failed/: README.md  v2_096_recheck_20260615.jsonl  v2_selection_20260615.jsonl  v2_selection_summary.json
outputs/plots/: a100_turbo_training_metrics.csv
scripts/: benchmark_checkpoints.py  distill_old_best.py  distill_old_best_light.cmd  export_pages_model.py  plot_training_metrics.py  rate_v0.py  rate_v6.py  render_architecture.py  train.sh  train_v2.cmd  train_v2_remote.sh  train_v3_local.cmd  train_v3_student_local.cmd
tests/: test_game.py  test_gumbel.py  test_heuristic_v0.py  test_inference.py  test_mcts.py  test_model.py  test_train.py
web/: app.js  index.html  styles.css
(+15 files in other folders)
